--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### macOS ###
+*.DS_Store
+.AppleDouble
+.LSOverride
+
 # Xcode
 #
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
